add buttns for dog and cat and dog bark js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <title>Cat vs Dog</title>
 </head>
 <body>
+  <div class="container">
+    <button class="btn btn-success" id="dog">Bark!</button>
+    <button class="btn btn-danger" id="cat">Meow!</button>
+    <div class="row">
+      <div class="col-6">
+        <h1>Dog says:</h1>
+        <ul id="doggo"></ul>
+      
+        </ul>
+      </div>
+      <div class="col-6">
+        <h1>Cat says:</h1>
+        <ul id="catto">
+
+        </ul>
+      </div>
+    </div>
+  </div>
   
 </body>
 </html>
